[package]
name = "rmqtt-storage"
version = "0.7.1"
authors = ["rmqtt <rmqttd@126.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rmqtt/rmqtt-storage"
homepage = "https://github.com/rmqtt/rmqtt-storage"
description = "rmqtt-storage -  Is a simple wrapper around some key-value storages"
keywords = ["storage", "async"]
categories = ["database"]
exclude = ["examples", ".gitignore", ".cargo/config"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
ttl = []
map_len = []
len = []
sled = ["dep:sled"]
redis = ["dep:redis"]
redis-cluster = ["redis", "redis/cluster", "redis/cluster-async"]

[dependencies]
sled = { version = "0.34", optional = true }
redis = { version = "0.32", features = [ "tokio-comp", "safe_iterators", "connection-manager"], optional = true }

tokio = { version = "1", features = ["sync", "rt"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
async-trait = "0.1"
bincode = "1.3"
log = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dashmap = "6.1"
ahash = "0.8"
convert = { package = "box-convert", version = "0.1", features = ["bytesize"] }

[dev-dependencies]
tokio = { version = "1", features = ["sync", "time", "macros", "rt", "rt-multi-thread"] }
cfg-if = "1"



